--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	 
 	     body
 		 {
-		   margin: 50;
+		   margin: 100;
 		   padding: 50;
 		   background-image: url('background.jpg');
 		   background-repeat:no-repeat;
-		   background-attachment: fixed;
+		   background-attachment: float;
 		   background-size: cover;
 		   background-position: center;
 		   height: 100vh;
