--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		   padding: 20;
 		   background-image: url('background.jpg');
 		   background-repeat:no-repeat;
-		   background-attachment: float;
+		   background-attachment: fixed;
 		   background-size: cover;
 		   background-position: center;
 		   height: 100vh;
