--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	  
 <h1>
 &copy;LET'S LEARN, EthicsLine &#9993;:
-<a href="mailto:kgwatalalakgosi54@gmail.com">Send Email</a>
+<a href="mailto:kgwatalalakgosi54@gmail.com">Send Email &#9993;</a>
 
 </h1>
      
