--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       
 	  
 <h1>
-&copy;LET'S LEARN, EthicsLine &#9993;:
+&copy;LET'S LEARN, EthicsLine :
 <a href="mailto:kgwatalalakgosi54@gmail.com">Send Email &#9993;</a>
 
 </h1>
