--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
      <h3>
 	 
 	   Contact details &#9742;:
-	   <a href ="tel:0813866292"> +27 81 386 6292</a>
-	   <a href ="tel:0816494063"> /+27 81 649 4063</a>
+	   <a href ="tel:+27 813866292"> +27 81 386 6292</a>
+	   <a href ="tel:+27 816494063"> /+27 81 649 4063</a>
 	 </h3>
 	 
 	 <adress>
